--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,133 +1,2 @@
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-main {
-  display: block; }
-
-blockquote,
-q {
-  quotes: none; }
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
-
-* {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
-
-body {
-  font-family: sans-serif;
-  color: #1F232A;
-  font-weight: 400;
-  position: relative;
-  -webkit-transition: 1s all ease-in-out;
-  -o-transition: 1s all ease-in-out;
-  transition: 1s all ease-in-out;
-  padding: 0 !important; }
-
-main {
-  background: white; }
-
-h1,
-h2,
-h3,
-h4 {
-  font-weight: 400; }
-
-a {
-  color: #2d9fe4;
-  -webkit-transition: .2s ease-in-out all;
-  -o-transition: .2s ease-in-out all;
-  transition: .2s ease-in-out all;
-  font-weight: 400;
-  text-decoration: none; }
-  a:hover {
-    text-decoration: none;
-    color: #2d9fe4 !important; }
-  a:focus {
-    text-decoration: none; }
-
-ul {
-  list-style-type: none;
-  padding-left: 0; }
-
-strong {
-  font-weight: 500; }
-
-label {
-  font-weight: 400; }
-
-.content-wrapper {
-  min-height: calc(100vh - 360px); }
-
-.dn {
-  display: none; }
-
-.db {
-  display: block; }
-
-.dib {
-  display: inline-block; }
-
-.fl {
-  float: left; }
-
-.fr {
-  float: right; }
-
-.fn {
-  float: none; }
-
-.cb {
-  clear: both; }
-
-.bk--title {
-  text-transform: uppercase;
-  font-weight: 900; }
-  .bk--title__white {
-    color: white; }
-  .bk--title__i {
-    font-style: italic; }
-  .bk--title p {
-    color: #2F3640; }
-  .bk--title span {
-    color: #2d9fe4; }
-
-@media screen and (min-width: 768px) {
-  .bk-no-padding {
-    padding: 0 !important; } }
-
-@media screen and (min-width: 768px) {
-  .bk-shadow {
-    -webkit-box-shadow: 6px 0px 14px -3px rgba(0, 0, 0, 0.41);
-    box-shadow: 6px 0px 14px -3px rgba(0, 0, 0, 0.41); } }
-
-.bk-hide {
-  opacity: 0;
-  -webkit-transition: .2s ease-in-out all;
-  -o-transition: .2s ease-in-out all;
-  transition: .2s ease-in-out all; }
-
-.modal-open {
-  overflow: scroll !important; }
-
-.destacar {
-  border: 1px solid red;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box; }
+@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,900&display=swap");article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section{display:block}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}.extra-light{font-weight:200}.light{font-weight:300}.regular{font-weight:400}.semi-bold{font-weight:600}.black{font-weight:900}*{-webkit-box-sizing:border-box;box-sizing:border-box}body{font-family:"Nunito Sans", sans-serif;color:#333030;font-weight:400;position:relative;-webkit-transition:1s all ease-in-out;-o-transition:1s all ease-in-out;transition:1s all ease-in-out;padding:0!important}main{background:white}h1,h2,h3,h4{font-weight:400}a{color:#8DC63F;-webkit-transition:.2s ease-in-out all;-o-transition:.2s ease-in-out all;transition:.2s ease-in-out all;font-weight:400;text-decoration:none}a:hover{text-decoration:none;color:#8DC63F!important}a:focus{text-decoration:none}ul{list-style-type:none;padding-left:0}strong{font-weight:900}label{font-weight:400}.content-wrapper{min-height:calc(100vh - 360px)}.dn{display:none}.db{display:block}.dib{display:inline-block}.fl{float:left}.fr{float:right}.fn{float:none}.cb{clear:both}.bk--title{text-transform:uppercase;font-weight:900}.bk--title__white{color:white}.bk--title__i{font-style:italic}.bk--title p{color:#2F3640}.bk--title span{color:#8DC63F}@media screen and (min-width:768px){.bk-no-padding{padding:0!important}}@media screen and (min-width:768px){.bk-shadow{-webkit-box-shadow:6px 0px 14px -3px rgba(0, 0, 0, 0.41);box-shadow:6px 0px 14px -3px rgba(0, 0, 0, 0.41)}}.bk-hide{opacity:0;-webkit-transition:.2s ease-in-out all;-o-transition:.2s ease-in-out all;transition:.2s ease-in-out all}.modal-open{overflow:scroll!important}.destacar{border:1px solid red;-webkit-box-sizing:border-box;box-sizing:border-box}
+/*# sourceMappingURL=main.css.map */
