--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,7 +10,8 @@
 @import 'base/typography';
 @import 'base/global';
 
-// @import 'components/loader';
+@import 'components/index';
+@import 'components/img';
 @import 'components/navbar';
 // @import 'components/buttons';
 // @import 'components/hamburguer';
