--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,6 +5,7 @@
 @import 'utils/media';
 @import 'utils/mixins';
 @import 'utils/placeholders';
+@import 'utils/carousel';
 
 @import 'base/reset';
 @import 'base/typography';
@@ -13,7 +14,6 @@
 @import 'components/index';
 @import 'components/img';
 @import 'components/navbar';
-// @import 'components/buttons';
 // @import 'components/hamburguer';
 // @import 'components/maps';
 // @import 'components/tooltips';
