cambios a home, background de divisor general además de secciones interiores para el mismo

--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -117,3 +117,11 @@ label {
 .modal-open {
     overflow: scroll !important;
 }
+
+.bg-verde{
+    background: $brand-primary-color;
+}
+
+.fondoGeneral{
+    background: url('../img/Fondo.svg');
+}
