--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,7 @@
 @import 'utils/mixins';
 @import 'utils/placeholders';
 @import 'utils/carousel';
+@import 'utils/formularios';
 
 @import 'base/reset';
 @import 'base/typography';
