actualización en página de inicio

--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -123,5 +123,5 @@ label {
 }
 
 .fondoGeneral{
-    background: url('../img/Fondo.svg');
+    background: url('../img/Fondo.svg') center center / cover no-repeat;
 }
