--- a/assets/scss/utils/_formularios.scss
+++ b/assets/scss/utils/_formularios.scss
@@ -6,10 +6,12 @@
     top: 200px;
     width: auto;
     height: 500px;
+    transition: .6s ease all;
 }
 
 .ecfc{
     margin-left: -480px;
+    transition: .6s ease all;
 }
 
 .formulario-contactanos{
